# Onlysharks-Frontend

./: Cargo.toml  README.md
assets/js/: script.min.js
src/: main.rs
src/routes/: about.rs  home.rs  login.rs  logout.rs  mod.rs  profile.rs  register.rs
templates/: about.html  app.html  index.html  profile.html  register.html
