[package]
name = "onlysharks-frontend"
version = "0.1.0"
authors = ["Evie Viau <evie.viau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_contrib = "0.4.6"
reqwest = { version = "0.10.9",  features = ["blocking", "json"]}
askama = { version = "0.8", features = [ "with-rocket" ] }
serde = "1.0.117"
serde_json = "1.0.60"
serde_derive = "1.0.117"